bug fix blurred uploaded image

--- a/src/main.css
+++ b/src/main.css
@@ -56,3 +56,28 @@ body{
     background-color: #7dbcea;
 }
 
+.label_add_slide {
+  margin-right: 5px;
+  padding: 5px 10px;
+  border-radius: 5px;
+  border: 1px ridge black;
+  font-size: 0.8rem;
+  height: auto;
+}
+
+#label_image_uploads {
+  display:inline; 
+  float:left;
+  background-color: #7f9ccb;
+}
+
+#label_image_uploads:hover {
+  background-color: #2d5ba3;
+  color: white;
+}
+
+#label_image_uploads:active {
+  background-color: #0d3f8f;
+  color: white;
+}
+
